trying to fix skill bar on mobile

--- a/jf-coded/src/stylesheets/Resume.css
+++ b/jf-coded/src/stylesheets/Resume.css
@@ -199,11 +199,11 @@ section div p {
     }
 
     .skill-bar {
-        width: 100vw;
+        width: 100%;
         height: 15px;
     }
     .skill-level{
-        height: 100%;
+        height: 15px;
     }
 }
 
